# hehub

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  adder_app.cpp
bench/: CMakeLists.txt  benchmarks.cpp  ckks_bm.cpp  mod_arith_bm.cpp  ntt_bm.cpp
examples/: CMakeLists.txt  ckks_example.cpp
fhe/src/: CMakeLists.txt
fhe/src/adder/: adder.cpp  adder.hpp
fhe/src/common/: CMakeLists.txt  bigint.h  bigintpoly.cpp  bigintpoly.h  mod_arith.cpp  mod_arith.h  ntt.cpp  ntt.h  permutation.cpp  permutation.h  primelists.h  rns_transform.cpp  rnspolynomial.cpp  rnspolynomial.h  sampling.cpp  sampling.h  type_defs.h
fhe/src/primitives/: CMakeLists.txt  keys.cpp  keys.h  rgsw.cpp  rgsw.h  rlwe.cpp  rlwe.h
fhe/src/primitives/bgv/: arith.cpp  basics.cpp  bgv.h  mod_switch.cpp
fhe/src/primitives/ckks/: CMakeLists.txt  arith.cpp  basics.cpp  ckks.h  rescaling.cpp
src/: CMakeLists.txt
src/adder/: CMakeLists.txt
src/circuits/: CMakeLists.txt  linear_algebra.cpp  linear_algebra.h
src/common/: CMakeLists.txt  bigint.cpp  bigint.h  bigintpoly.cpp  bigintpoly.h  mod_arith.cpp  mod_arith.h  ntt.cpp  ntt.h  permutation.h  rns_transform.cpp  rns_transform.h  rnspolynomial.cpp  rnspolynomial.h  sampling.cpp  sampling.h  type_defs.h
src/fhe/: CMakeLists.txt
src/fhe/bgv/: arith.cpp  basics.cpp  bgv.h  mod_switch.cpp
src/fhe/ckks/: CMakeLists.txt  arith.cpp  basics.cpp  ckks.h  rescaling.cpp
src/fhe/common/: CMakeLists.txt  allocator.h  bigint.cpp  bigint.h  bigintpoly.cpp  bigintpoly.h  mod_arith.h  ntt.cpp  ntt.h  permutation.cpp  permutation.h  pooling.h  primelists.cpp  rns.cpp  rns.h  rns_transform.cpp  rns_transform.h  sampling.cpp  sampling.h  type_defs.h
src/fhe/primitives/: CMakeLists.txt  keys.cpp  keys.h  lwe.h  rgsw.cpp  rgsw.h  rlwe.cpp  rlwe.h
src/fhe/tfhe/: CMakeLists.txt  func_boot.cpp  func_boot.h
src/primitives/: CMakeLists.txt  rlwe.cpp  rlwe.h
src/primitives/bgv/: CMakeLists.txt  arith.cpp  basics.cpp  bgv.cpp  bgv.h  mod_switch.cpp
src/primitives/ckks/: basics.cpp  ckks.h
tests/: CMakeLists.txt  adder_t.cpp  bgv_t.cpp  bigint_t.cpp  ckks_t.cpp  common.cpp  common_t.cpp  lin_alg_t.cpp  mod_arith_t.cpp  ntt_t.cpp  rlwe_t.cpp
