project(hehub)
add_library(${PROJECT_NAME})
# require at least c++17
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

Option(FHE_DEBUG OFF)
if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
    set(FHE_DEBUG ON)
endif()
if(FHE_DEBUG)
    target_compile_definitions(${PROJECT_NAME} PUBLIC FHE_DEBUG)
endif()

Option(RLWE_DEBUG_ZERO_C1 OFF)
Option(RLWE_DEBUG_ZERO_E OFF)
if(RLWE_DEBUG_ZERO_C1)
    target_compile_definitions(${PROJECT_NAME} PUBLIC RLWE_DEBUG_ZERO_C1)
endif()
if(RLWE_DEBUG_ZERO_E)
    target_compile_definitions(${PROJECT_NAME} PUBLIC RLWE_DEBUG_ZERO_E)
endif()

add_subdirectory(adder)
add_subdirectory(common)
add_subdirectory(primitives)
